thumbnail: scrollbar removed + width fixed

--- a/src/_utils.scss
+++ b/src/_utils.scss
@@ -21,6 +21,9 @@
     }
 }
 
+.hiddenScrollbar{
+    scrollbar-width: none;
+}
 .hiddenScrollbar::-webkit-scrollbar{
     width: 0;
     height: 0;
