--- a/src/imageViewer.scss
+++ b/src/imageViewer.scss
@@ -209,7 +209,9 @@
                 > .thumbnailContainer{
                     > .thumbnail{
                         width: auto;
-                        height: calc(100% - 10px);
+                        max-width: 120px;
+                        height: auto;
+                        max-height: 70px;
                         border: solid 3px transparent;
                         border-radius: 3px;
                         cursor: pointer;
